@@ -20,7 +20,7 @@ idrisDef = haskellDef {
               opLetter = iOpLetter,
               identLetter = identLetter haskellDef <|> lchar '.',
               reservedOpNames = [":", "..", "=", "\\", "|", "<-", "->", "=>", "**"],
-              reservedNames = ["let", "in", "data", "record", "Set", 
+              reservedNames = ["let", "in", "data", "codata", "record", "Set", 
                                "do", "dsl", "import", "impossible", 
                                "case", "of", "total", "partial",
                                "infix", "infixl", "infixr", 
